--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>For You 💌</title>
-<link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png"/>
+<link rel="icon" type="image/png" sizes="512x512" href="photos/favicon-512.png"/>
 <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet"/>
 <style>
@@ -21,7 +21,6 @@
 html{scroll-behavior:smooth}
 body{background:var(--cream);color:var(--ink);font-family:'Libre Baskerville',serif;overflow-x:hidden}
 
-/* ─── PUZZLE PAGE ─── */
 #puzzle-page{
   position:fixed;inset:0;z-index:100;
   display:flex;flex-direction:column;align-items:center;justify-content:center;
@@ -112,7 +111,6 @@ body{background:var(--cream);color:var(--ink);font-family:'Libre Baskerville',se
   font-style:italic;letter-spacing:0.05em;
 }
 
-/* ─── WIN POPUP ─── */
 #win-popup{
   position:fixed;inset:0;z-index:200;
   display:flex;align-items:center;justify-content:center;
@@ -155,7 +153,6 @@ body{background:var(--cream);color:var(--ink);font-family:'Libre Baskerville',se
 }
 @keyframes pulse{0%,100%{transform:scale(1);}50%{transform:scale(1.12);}}
 
-/* ─── MAIN SITE ─── */
 #main-site{opacity:0;transform:translateY(30px);transition:opacity 1s 0.3s, transform 1s 0.3s;}
 #main-site.reveal{opacity:1;transform:translateY(0);}
 
@@ -260,7 +257,6 @@ body{background:var(--cream);color:var(--ink);font-family:'Libre Baskerville',se
 </head>
 <body>
 
-<!-- ═══════ PUZZLE PAGE ═══════ -->
 <div id="puzzle-page">
   <p class="puzzle-eyebrow">A little challenge for you 💌</p>
   <h1 class="puzzle-title">Put us back together</h1>
@@ -286,7 +282,7 @@ body{background:var(--cream);color:var(--ink);font-family:'Libre Baskerville',se
   </div>
 </div>
 
-<!-- ═══════ WIN POPUP ═══════ -->
+
 <div id="win-popup">
   <div class="win-card" id="win-card">
     <span class="win-hearts">♥ ♥ ♥</span>
@@ -296,7 +292,7 @@ body{background:var(--cream);color:var(--ink);font-family:'Libre Baskerville',se
   </div>
 </div>
 
-<!-- ═══════ MAIN SITE ═══════ -->
+
 <div id="main-site">
   <div class="petals-container" id="petals"></div>
 
@@ -328,16 +324,15 @@ body{background:var(--cream);color:var(--ink);font-family:'Libre Baskerville',se
     <p class="section-label">Some of my favorite moments!</p>
     <div class="photo-grid">
       <div class="photo-card">
-        <img class="photo-img" src="photo1.png" alt="Us"/>
+        <img class="photo-img" src="photos/photo1.png" alt="Us"/>
         <p class="photo-caption">Hands Up!</p>
       </div>
       <div class="photo-card">
-        <img class="photo-img" src="photo2.jpg" alt="Us"/>
+        <img class="photo-img" src="photos/photo2.jpg" alt="Us"/>
         <p class="photo-caption">Dont Blink!</p>
       </div>
       <div class="photo-card">
-        <!-- <img class="photo-img" src="photo3.jpg" alt="Us"/> -->
-        <div class="photo-placeholder"><span class="ph-icon">📷</span><span class="ph-text">Add your photo here</span></div>
+        <img class="photo-img" src="photos/photo3.png" alt="Us"/>
         <p class="photo-caption">Race Ya!</p>
       </div>
     </div>
@@ -350,18 +345,16 @@ body{background:var(--cream);color:var(--ink);font-family:'Libre Baskerville',se
 </div>
 
 <script>
-// ─────────────────────────────────────────────────
-//  CONFIG  ← edit these three things
-// ─────────────────────────────────────────────────
-const IMAGE_URL = 'puzzle-converted.png'; // path/URL to the puzzle photo
+
+const IMAGE_URL = 'photos/puzzle-converted.png'; 
 const COLS = 3;
 const ROWS = 3;
-// ─────────────────────────────────────────────────
+
 
 const TOTAL = COLS * ROWS;
 const TILE_PX = Math.min(Math.floor((Math.min(window.innerWidth, 520) - 50) / COLS), 148);
 
-let grid = [];       // grid[i] = correctTileIndex that lives there (-1 = empty)
+let grid = [];       
 let emptyPos = TOTAL - 1;
 let moves = 0;
 let solved = false;
@@ -369,14 +362,13 @@ let solved = false;
 const boardEl     = document.getElementById('puzzle-board');
 const moveCountEl = document.getElementById('move-count');
 
-/* ── build board DOM ── */
+
 function buildBoard() {
   boardEl.style.gridTemplateColumns = `repeat(${COLS}, ${TILE_PX}px)`;
   boardEl.innerHTML = '';
 
-  // Start in solved order
   grid = Array.from({length: TOTAL}, (_, i) => i);
-  grid[TOTAL - 1] = -1; // empty slot
+  grid[TOTAL - 1] = -1; 
   emptyPos = TOTAL - 1;
 
   for (let i = 0; i < TOTAL; i++) {
@@ -390,14 +382,12 @@ function buildBoard() {
     boardEl.appendChild(el);
   }
 
-  // Inject preview image
   const prev = document.getElementById('preview-overlay');
   prev.innerHTML = `<img src="${IMAGE_URL}" alt="preview"/><div class="preview-label">Here's what it should look like ♥</div>`;
 
   shuffle();
 }
 
-/* ── set background for a tile element based on its correct tile index ── */
 function setTileBg(el, tileIdx) {
   if (tileIdx === -1) {
     el.style.backgroundImage = '';
@@ -413,13 +403,12 @@ function setTileBg(el, tileIdx) {
   el.style.backgroundPosition = `${(COLS === 1 ? 0 : col / (COLS - 1)) * 100}% ${(ROWS === 1 ? 0 : row / (ROWS - 1)) * 100}%`;
 }
 
-/* ── refresh the visual state of all tiles ── */
 function renderBoard() {
   const els = Array.from(boardEl.children);
   els.forEach((el, pos) => {
     const tileIdx = grid[pos];
     setTileBg(el, tileIdx);
-    // highlight if correctly placed
+    
     if (tileIdx !== -1 && tileIdx === pos) {
       el.classList.add('correct');
     } else {
@@ -428,7 +417,6 @@ function renderBoard() {
   });
 }
 
-/* ── get valid neighbour positions of the empty slot ── */
 function neighbours(pos) {
   const row = Math.floor(pos / COLS), col = pos % COLS;
   const n = [];
@@ -439,12 +427,10 @@ function neighbours(pos) {
   return n;
 }
 
-/* ── try to slide tile at clicked position into empty slot ── */
 function tryMove(clickedPos) {
   if (solved) return;
   if (!neighbours(emptyPos).includes(clickedPos)) return;
 
-  // swap
   grid[emptyPos] = grid[clickedPos];
   grid[clickedPos] = -1;
   emptyPos = clickedPos;
@@ -455,13 +441,11 @@ function tryMove(clickedPos) {
   checkWin();
 }
 
-/* ── shuffle via random valid moves ── */
 function shuffle() {
   solved = false;
   moves  = 0;
   moveCountEl.textContent = 0;
 
-  // reset to solved
   grid = Array.from({length: TOTAL}, (_, i) => i);
   grid[TOTAL - 1] = -1;
   emptyPos = TOTAL - 1;
@@ -478,7 +462,6 @@ function shuffle() {
   renderBoard();
 }
 
-/* ── check win condition ── */
 function checkWin() {
   const allCorrect = grid.every((tileIdx, pos) =>
     pos === TOTAL - 1 ? tileIdx === -1 : tileIdx === pos
@@ -489,7 +472,6 @@ function checkWin() {
   }
 }
 
-/* ── show win popup ── */
 function showWin() {
   const popup = document.getElementById('win-popup');
   popup.classList.add('show');
@@ -515,7 +497,6 @@ function spawnConfetti() {
   }
 }
 
-/* ── close popup & reveal site ── */
 document.getElementById('win-close-btn').addEventListener('click', () => {
   document.getElementById('win-popup').classList.remove('show');
   document.getElementById('puzzle-page').classList.add('hide');
@@ -528,10 +509,8 @@ document.getElementById('win-close-btn').addEventListener('click', () => {
   }, 900);
 });
 
-/* ── shuffle button ── */
 document.getElementById('shuffle-btn').addEventListener('click', shuffle);
 
-/* ── peek button ── */
 const peekBtn     = document.getElementById('preview-btn');
 const peekOverlay = document.getElementById('preview-overlay');
 peekBtn.addEventListener('mousedown',  () => peekOverlay.classList.add('show'));
@@ -540,7 +519,6 @@ peekBtn.addEventListener('mouseleave', () => peekOverlay.classList.remove('show'
 peekBtn.addEventListener('touchstart', (e) => { e.preventDefault(); peekOverlay.classList.add('show'); }, {passive:false});
 peekBtn.addEventListener('touchend',   () => peekOverlay.classList.remove('show'));
 
-/* ── falling petals for main site ── */
 function spawnPetals() {
   const container = document.getElementById('petals');
   for (let i = 0; i < 22; i++) {
@@ -558,7 +536,6 @@ function spawnPetals() {
   }
 }
 
-/* ── init ── */
 buildBoard();
 </script>
 </body>
